# back-to-asm-with-rust

./: CHANGELOG.MD  README.txt
boot/: boot.asm  make_boot.sh
kernel/: Cargo.toml  MULTIBOOT_README.md  a.out  check_obj.sh  count_sectors.py  link.ld  link_multiboot.ld  make_iso.sh  make_kernel.sh  make_multiboot.sh  multiboot.asm  shell.nix  target.json
kernel/src/: editor.rs  kernel_main.rs  lib.rs  macros.rs  main.rs  shims.rs  vga.rs
kernel/src/fs/: fat16.rs
recycle_bin/: os.img
recycle_bin/boot/: boot_minimal.asm  boot_simple.asm  simple.asm  test_boot.asm  test_jump.asm
recycle_bin/kernel/: kernel16.asm  kernel_simple.asm  main_asm.rs
recycle_bin/release/: os_rust.img  os_test.img  test_os.img
release/: connect_and_run.sh  kernel_multiboot.elf  os.img  run_multiboot.sh
release/multiboot/: kernel_multiboot.elf
release/multiboot/isodir/boot/: kernel.elf
release/multiboot/isodir/boot/grub/: grub.cfg
