[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[lib]
name = "kernel"
path = "src/lib.rs"

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]

[profile.dev]
panic = "abort"
debug = false

[profile.release]
panic = "abort"
debug = false
strip = true         # Automatycznie usuwa tablicę symboli i debug info
opt-level = "z"      # Optymalizacja pod kątem rozmiaru
